# ZMctf

./: .biomeignore  .clang-tidy  .gitignore  .gitmodules  .golangci.yml  .markuplintrc  .mega-linter.yml  .stylelintrc  .yamllint  AGENTS.md  README.md  biome.json  pyproject.toml  tsconfig.json
.github/workflows/: quality.yml
scripts/: verify.ps1
zmctf-desktop/: Cargo.toml  index.html  package-lock.json  package.json  tailwind.config.cjs  tsconfig.json  vite.config.ts
zmctf-desktop/src/: App.tsx  main.rs  main.tsx  styles.css
zmctf-desktop/src-tauri/: Cargo.toml  tauri.conf.json
zmctf-desktop/src-tauri/icons/: icon.icns
zmctf-desktop/src/components/: Badge.tsx  Button.tsx  Card.tsx  CopyButton.tsx  FlagDetectorPanel.tsx  Input.tsx  OverviewPanel.tsx  SettingsDialog.tsx  Sidebar.tsx  Textarea.tsx  TopBar.tsx
zmctf-desktop/src/lib/: api.ts  modules.ts  storage.ts
