[package]
name = "zmctf-tauri"
version = "0.1.0"
description = "ZMctf 桌面 GUI（Tauri）"
authors = ["ze-mu-zhou <996029583@qq.com>"]
edition = "2021"
license = "MIT"
publish = false

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.9.5", features = [] }
